--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,11 @@
   <script src="assets/js/wow.js"></script>
   <script src="assets/js/jquery.bxslider.min.js"></script>
   <script src="assets/js/custom.js"></script>
+  <script>
+    if (global === undefined) {
+      var global = window;
+    }
+  </script>
   <app-root></app-root>
 </body>
 </html>
